# Discretization

./: README.md  algorithm.py  app.py  pyproject.toml  requirements.txs
